syntax = "proto3";

package protoc;

import "google/protobuf/timestamp.proto";
option go_package = "./;pb";

message QueryFlightInput{

  string from = 3 ;
  string to = 4 ;
  google.protobuf.Timestamp depart_date = 5 ;
  google.protobuf.Timestamp return_date = 10 ;
  int32 size = 11;
  int32 page = 12;
  string type = 13;
}

message Flight {
  int32 id = 1;
  string name = 2 ;
  string from = 3 ;
  string to = 4 ;
  string type = 13;
  google.protobuf.Timestamp depart_date = 5 ;
  google.protobuf.Timestamp return_date = 12 ;
  google.protobuf.Timestamp depart_time = 6 ;
  string status = 7 ;
  int32 available_slots = 8 ;
  string flight_plane = 9 ;
  google.protobuf.Timestamp created_at = 10 ;
  google.protobuf.Timestamp updated_at = 11 ;
}

message CreateFlightInput{
  string name = 2 ;
  string from = 3 ;
  string to = 4 ;
  google.protobuf.Timestamp depart_date = 5 ;
  google.protobuf.Timestamp depart_time = 6 ;
  google.protobuf.Timestamp return_date = 12 ;
  string type = 13;
  string status = 7 ;
  int32 available_slots = 8 ;
  string flight_plane = 9 ;
}

message UpdateFlightInput{
  int32 id = 1;
  string name = 2 ;
  string from = 3 ;
  string to = 4 ;
  google.protobuf.Timestamp depart_date = 5 ;
  google.protobuf.Timestamp depart_time = 6 ;
  google.protobuf.Timestamp return_date = 12 ;
  string type = 13;
  string status = 7 ;
  int32 available_slots = 8 ;
  string flight_plane = 9 ;
}

message SearchFlightResponse{
  repeated Flight flights = 1;
  int32 size = 11;
  int32 page = 12;
  int32 totalPages = 13;
  int32 totalRecords = 14;
  string type = 15;
}

message GetFlightByIdInput{
  int32 id = 1;
}

message CountFlightsByStatusResponse{
  int32 total = 1;
  string status = 2;
}

message CountFlightsByStatusInput{
  string status = 1;
  int32 flight_id = 2;
}


service FlightService{
  rpc CreateFlight(CreateFlightInput) returns (Flight);
  rpc UpdateFlight(UpdateFlightInput) returns (Flight);
  rpc SearchFlights(QueryFlightInput) returns (SearchFlightResponse);
  rpc GetFlightById(GetFlightByIdInput) returns (Flight);
  rpc CountFlightsByStatus(CountFlightsByStatusInput) returns (CountFlightsByStatusResponse);
}
